name:                   prim-uniq
version:                0.1
stability:              provisional

cabal-version:          >= 1.2
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               /dev/null

category:               Data, Dependent Types
synopsis:               Opaque unique identifiers in primitive state monads
description:            Opaque unique identifiers in primitive state monads 
                        and a GADT-like type using them as witnesses of type
                        equality.

source-repository head
  type:     darcs
  location: http://code.haskell.org/~mokus/prim-uniq

Library
  hs-source-dirs:       src
  exposed-modules:      Data.Unique.Prim
                        Data.Unique.Tag
                        Unsafe.Unique.Prim
                        Unsafe.Unique.Tag
  build-depends:        base >= 3 && <5, dependent-sum, primitive
