name:                   prim-uniq
version:                0.1.0.2
stability:              provisional

cabal-version:          >= 1.6
build-type:             Simple

author:                 James Cook <mokus@deepbondi.net>
maintainer:             James Cook <mokus@deepbondi.net>
license:                PublicDomain
homepage:               https://github.com/mokus0/prim-uniq

category:               Data, Dependent Types
synopsis:               Opaque unique identifiers in primitive state monads
description:            Opaque unique identifiers in primitive state monads
                        and a GADT-like type using them as witnesses of type
                        equality.

tested-with:            GHC == 7.0.4,
                        GHC == 7.2.2,
                        GHC == 7.4.2,
                        GHC == 7.6.3,
                        GHC == 7.8.4,
                        GHC == 7.10.1,
                        GHC == 7.11

source-repository head
  type:     git
  location: git://github.com/mokus0/prim-uniq.git

Library
  hs-source-dirs:       src
  exposed-modules:      Data.Unique.Prim
                        Data.Unique.Tag
                        Unsafe.Unique.Prim
                        Unsafe.Unique.Tag
  build-depends:        base >= 3 && <5,
                        dependent-sum >= 0.2 && < 0.4,
                        primitive
